[metadata]
name = svGPFA
version = 1.0.0
description = Python implementation of the svGPFA algorithm (Duncker and Sahani, 2018)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joacorapela/svGPFA
author = Joaquin Rapela
author_email = j.rapela@ucl.ac.uk
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
package_dir = 
     = src
packages = find:
install_requires = 
    gcnu_common
    torch
    scipy

[options.packages.find]
where = src

[options.extras_require]
notebook = 
    notebook
    pandas
    plotly
    kaleido
    scikit-learn
docs =
    sphinx-gallery
