[build-system]                                                                    
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gcnu_common"
version = "0.0.1"
authors = [
  { name="Joaquin Rapela", email="j.rapela@ucl.ac.uk" },
]
description = "Common functionality for GCNU libraries"
readme = "README.md"
requires-python = ">=3.7"
